Final/src/AMPL/AMPLPar/BNFC/ParAMPL.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.5 from ParAMPL.y
-----------------------------------------------------------------------------


rule 64 is unused
rule 72 is unused
rule 73 is unused
rule 157 is unused
rule 158 is unused
rule 159 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pAMPLCODE -> AMPLCODE                       (0)
	String -> L_quoted                                 (1)
	Integer -> L_integ                                 (2)
	Store -> L_Store                                   (3)
	Load -> L_Load                                     (4)
	Ret -> L_Ret                                       (5)
	Call -> L_Call                                     (6)
	ConstInt -> L_ConstInt                             (7)
	ConstChar -> L_ConstChar                           (8)
	ConstString -> L_ConstString                       (9)
	ToStr -> L_ToStr                                   (10)
	ToInt -> L_ToInt                                   (11)
	And -> L_And                                       (12)
	Or -> L_Or                                         (13)
	Append -> L_Append                                 (14)
	Unstring -> L_Unstring                             (15)
	LeqI -> L_LeqI                                     (16)
	EqI -> L_EqI                                       (17)
	Leqc -> L_Leqc                                     (18)
	Eqc -> L_Eqc                                       (19)
	Leqs -> L_Leqs                                     (20)
	Eqs -> L_Eqs                                       (21)
	ConcatS -> L_ConcatS                               (22)
	Add -> L_Add                                       (23)
	Subtract -> L_Subtract                             (24)
	Mul -> L_Mul                                       (25)
	Quot -> L_Quot                                     (26)
	Rem -> L_Rem                                       (27)
	Cons -> L_Cons                                     (28)
	Case -> L_Case                                     (29)
	Rec -> L_Rec                                       (30)
	Get -> L_Get                                       (31)
	Put -> L_Put                                       (32)
	Hput -> L_Hput                                     (33)
	Hcase -> L_Hcase                                   (34)
	Split -> L_Split                                   (35)
	Fork -> L_Fork                                     (36)
	Plug -> L_Plug                                     (37)
	Run -> L_Run                                       (38)
	Close -> L_Close                                   (39)
	Halt -> L_Halt                                     (40)
	Ch_Id -> L_Ch_Id                                   (41)
	Main_run -> L_Main_run                             (42)
	Character -> L_Character                           (43)
	UIdent -> L_UIdent                                 (44)
	PIdent -> L_PIdent                                 (45)
	PInteger -> L_PInteger                             (46)
	AMPLCODE -> ListAMPL_CONSTRUCTS START              (47)
	AMPL_CONSTRUCTS -> IMPORT                          (48)
	AMPL_CONSTRUCTS -> HANDLES                         (49)
	AMPL_CONSTRUCTS -> COHANDLES                       (50)
	AMPL_CONSTRUCTS -> CONSTRUCTORS                    (51)
	AMPL_CONSTRUCTS -> DESTRUCTORS                     (52)
	AMPL_CONSTRUCTS -> PROCESSES                       (53)
	AMPL_CONSTRUCTS -> FUNCTIONS                       (54)
	ListAMPL_CONSTRUCTS ->                             (55)
	ListAMPL_CONSTRUCTS -> ListAMPL_CONSTRUCTS AMPL_CONSTRUCTS   (56)
	HANDLE_SPEC -> UIdent '=' '{' ListHandle '}'       (57)
	Handle -> UIdent                                   (58)
	ListHANDLE_SPEC ->                                 (59)
	ListHANDLE_SPEC -> HANDLE_SPEC                     (60)
	ListHANDLE_SPEC -> HANDLE_SPEC ';' ListHANDLE_SPEC   (61)
	ListHandle -> Handle                               (62)
	ListHandle -> Handle ';' ListHandle                (63)
	IMPORTS -> ListIMPORT                              (64)
	LUIDENT -> PIdent                                  (65)
	LUIDENT -> UIdent                                  (66)
	DirPath -> ListLUIDENT                             (67)
	ListLUIDENT -> LUIDENT                             (68)
	ListLUIDENT -> LUIDENT '/' ListLUIDENT             (69)
	Slash -> '/'                                       (70)
	Slash ->                                           (71)
	ListIMPORT ->                                      (72)
	ListIMPORT -> ListIMPORT IMPORT                    (73)
	IMPORT -> '%include' Slash DirPath '.ampl'         (74)
	CONSTRUCTORS -> '%constructors' ':' '{' ListSTRUCTOR_SPEC '}'   (75)
	DESTRUCTORS -> '%destructors' ':' '{' ListSTRUCTOR_SPEC '}'   (76)
	STRUCTOR_SPEC -> UIdent '=' '{' ListSTRUCT '}'     (77)
	STRUCT -> UIdent PInteger                          (78)
	ListSTRUCTOR_SPEC ->                               (79)
	ListSTRUCTOR_SPEC -> STRUCTOR_SPEC                 (80)
	ListSTRUCTOR_SPEC -> STRUCTOR_SPEC ';' ListSTRUCTOR_SPEC   (81)
	ListSTRUCT -> STRUCT                               (82)
	ListSTRUCT -> STRUCT ';' ListSTRUCT                (83)
	HANDLES -> '%handles' ':' '{' ListHANDLE_SPEC '}'   (84)
	COHANDLES -> '%cohandles' ':' '{' ListHANDLE_SPEC '}'   (85)
	PROCESSES -> '%processes' ':' '{' ListPROCESS_SPEC '}'   (86)
	ListPROCESS_SPEC ->                                (87)
	ListPROCESS_SPEC -> PROCESS_SPEC                   (88)
	ListPROCESS_SPEC -> PROCESS_SPEC ';' ListPROCESS_SPEC   (89)
	PROCESS_SPEC -> PIdent '(' ListVars '|' ListPIdent '=>' ListPIdent ')' '=' COMS   (90)
	Vars -> PIdent                                     (91)
	ListVars ->                                        (92)
	ListVars -> Vars                                   (93)
	ListVars -> Vars ',' ListVars                      (94)
	FUNCTIONS -> '%functions' ':' '{' ListFUNCTION_SPEC '}'   (95)
	ListFUNCTION_SPEC ->                               (96)
	ListFUNCTION_SPEC -> FUNCTION_SPEC                 (97)
	ListFUNCTION_SPEC -> FUNCTION_SPEC ';' ListFUNCTION_SPEC   (98)
	FUNCTION_SPEC -> PIdent '(' ListVars ')' '=' COMS   (99)
	START -> Main_run CHANNEL_SPEC ':' COMS            (100)
	START ->                                           (101)
	CHANNEL_SPEC -> '(' '|' ListPIdent '=>' ListPIdent ')'   (102)
	CHANNEL_SPEC -> '(' ListCInteger '=>' ListCInteger ')'   (103)
	COMS -> '{' ListCOM '}'                            (104)
	ListCOM ->                                         (105)
	ListCOM -> COM                                     (106)
	ListCOM -> COM ';' ListCOM                         (107)
	COM -> PIdent ':=' COM                             (108)
	COM -> Store PIdent                                (109)
	COM -> Load PIdent                                 (110)
	COM -> Ret                                         (111)
	COM -> Call PIdent '(' ListPIdent ')'              (112)
	COM -> ConstInt CInteger                           (113)
	COM -> ConstChar Character                         (114)
	COM -> ConstString String                          (115)
	COM -> ToStr                                       (116)
	COM -> ToInt                                       (117)
	COM -> And                                         (118)
	COM -> Or                                          (119)
	COM -> Append                                      (120)
	COM -> Unstring                                    (121)
	COM -> LeqI                                        (122)
	COM -> EqI                                         (123)
	COM -> Leqc                                        (124)
	COM -> Eqc                                         (125)
	COM -> Leqs                                        (126)
	COM -> Eqs                                         (127)
	COM -> ConcatS Integer                             (128)
	COM -> Add                                         (129)
	COM -> Subtract                                    (130)
	COM -> Mul                                         (131)
	COM -> Quot                                        (132)
	COM -> Rem                                         (133)
	COM -> Cons '(' PInteger ',' PInteger ')'          (134)
	COM -> UIdent '.' UIdent                           (135)
	COM -> UIdent '.' UIdent '(' ListPIdent ')'        (136)
	COM -> Case 'of' '{' ListLABELCOMS '}'             (137)
	COM -> Rec 'of' '{' ListLABELCOMS '}'              (138)
	COM -> UIdent '.' UIdent PIdent                    (139)
	COM -> UIdent '.' UIdent '(' ListPIdent ')' PIdent   (140)
	COM -> Get PIdent 'on' PIdent                      (141)
	COM -> Hput PIdent UIdent '.' UIdent               (142)
	COM -> Hcase PIdent 'of' '{' ListLABELCOMS '}'     (143)
	COM -> Put PIdent                                  (144)
	COM -> Split PIdent 'into' PIdent PIdent           (145)
	COM -> Fork PIdent 'as' '{' PIdent 'with' ListPIdent ':' COMS ';' PIdent 'with' ListPIdent ':' COMS '}'   (146)
	COM -> Plug ListPIdent 'as' '{' 'with' '[' ListPIdent ']' ':' COMS ';' 'with' '[' ListPIdent ']' ':' COMS '}'   (147)
	COM -> Run PIdent '(' ListPIdent '|' ListPIdent '=>' ListPIdent ')'   (148)
	COM -> PIdent Ch_Id PIdent                         (149)
	COM -> '(' ListPIdent ')'                          (150)
	COM -> '#' CInteger '(' PIdent ')'                 (151)
	COM -> String                                      (152)
	COM -> Close PIdent                                (153)
	COM -> Halt ListPIdent                             (154)
	LABELCOMS -> UIdent '.' UIdent ':' COMS            (155)
	LABELCOMS -> UIdent '.' UIdent '(' ListPIdent ')' ':' COMS   (156)
	ListCOMS ->                                        (157)
	ListCOMS -> COMS                                   (158)
	ListCOMS -> COMS ',' ListCOMS                      (159)
	ListLABELCOMS ->                                   (160)
	ListLABELCOMS -> LABELCOMS                         (161)
	ListLABELCOMS -> LABELCOMS ';' ListLABELCOMS       (162)
	ListPIdent ->                                      (163)
	ListPIdent -> PIdent                               (164)
	ListPIdent -> PIdent ',' ListPIdent                (165)
	CInteger -> PInteger                               (166)
	CInteger -> '-' PInteger                           (167)
	ListCInteger ->                                    (168)
	ListCInteger -> CInteger                           (169)
	ListCInteger -> CInteger ',' ListCInteger          (170)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'#'            { PT _ (TS _ 1) }
	'%cohandles'   { PT _ (TS _ 2) }
	'%constructors'{ PT _ (TS _ 3) }
	'%destructors' { PT _ (TS _ 4) }
	'%functions'   { PT _ (TS _ 5) }
	'%handles'     { PT _ (TS _ 6) }
	'%include'     { PT _ (TS _ 7) }
	'%processes'   { PT _ (TS _ 8) }
	'('            { PT _ (TS _ 9) }
	')'            { PT _ (TS _ 10) }
	','            { PT _ (TS _ 11) }
	'-'            { PT _ (TS _ 12) }
	'.'            { PT _ (TS _ 13) }
	'.ampl'        { PT _ (TS _ 14) }
	'/'            { PT _ (TS _ 15) }
	':'            { PT _ (TS _ 16) }
	':='           { PT _ (TS _ 17) }
	';'            { PT _ (TS _ 18) }
	'='            { PT _ (TS _ 19) }
	'=>'           { PT _ (TS _ 20) }
	'['            { PT _ (TS _ 21) }
	']'            { PT _ (TS _ 22) }
	'as'           { PT _ (TS _ 23) }
	'into'         { PT _ (TS _ 24) }
	'of'           { PT _ (TS _ 25) }
	'on'           { PT _ (TS _ 26) }
	'with'         { PT _ (TS _ 27) }
	'{'            { PT _ (TS _ 28) }
	'|'            { PT _ (TS _ 29) }
	'}'            { PT _ (TS _ 30) }
	L_quoted       { PT _ (TL $$) }
	L_integ        { PT _ (TI $$) }
	L_Store        { PT _ (T_Store _) }
	L_Load         { PT _ (T_Load _) }
	L_Ret          { PT _ (T_Ret _) }
	L_Call         { PT _ (T_Call _) }
	L_ConstInt     { PT _ (T_ConstInt _) }
	L_ConstChar    { PT _ (T_ConstChar _) }
	L_ConstString  { PT _ (T_ConstString _) }
	L_ToStr        { PT _ (T_ToStr _) }
	L_ToInt        { PT _ (T_ToInt _) }
	L_And          { PT _ (T_And _) }
	L_Or           { PT _ (T_Or _) }
	L_Append       { PT _ (T_Append _) }
	L_Unstring     { PT _ (T_Unstring _) }
	L_LeqI         { PT _ (T_LeqI _) }
	L_EqI          { PT _ (T_EqI _) }
	L_Leqc         { PT _ (T_Leqc _) }
	L_Eqc          { PT _ (T_Eqc _) }
	L_Leqs         { PT _ (T_Leqs _) }
	L_Eqs          { PT _ (T_Eqs _) }
	L_ConcatS      { PT _ (T_ConcatS _) }
	L_Add          { PT _ (T_Add _) }
	L_Subtract     { PT _ (T_Subtract _) }
	L_Mul          { PT _ (T_Mul _) }
	L_Quot         { PT _ (T_Quot _) }
	L_Rem          { PT _ (T_Rem _) }
	L_Cons         { PT _ (T_Cons _) }
	L_Case         { PT _ (T_Case _) }
	L_Rec          { PT _ (T_Rec _) }
	L_Get          { PT _ (T_Get _) }
	L_Put          { PT _ (T_Put _) }
	L_Hput         { PT _ (T_Hput _) }
	L_Hcase        { PT _ (T_Hcase _) }
	L_Split        { PT _ (T_Split _) }
	L_Fork         { PT _ (T_Fork _) }
	L_Plug         { PT _ (T_Plug _) }
	L_Run          { PT _ (T_Run _) }
	L_Close        { PT _ (T_Close _) }
	L_Halt         { PT _ (T_Halt _) }
	L_Ch_Id        { PT _ (T_Ch_Id _) }
	L_Main_run     { PT _ (T_Main_run _) }
	L_Character    { PT _ (T_Character _) }
	L_UIdent       { PT _ (T_UIdent _) }
	L_PIdent       { PT _ (T_PIdent _) }
	L_PInteger     { PT _ (T_PInteger _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pAMPLCODE rule  0
	String          rule  1
	Integer         rule  2
	Store           rule  3
	Load            rule  4
	Ret             rule  5
	Call            rule  6
	ConstInt        rule  7
	ConstChar       rule  8
	ConstString     rule  9
	ToStr           rule  10
	ToInt           rule  11
	And             rule  12
	Or              rule  13
	Append          rule  14
	Unstring        rule  15
	LeqI            rule  16
	EqI             rule  17
	Leqc            rule  18
	Eqc             rule  19
	Leqs            rule  20
	Eqs             rule  21
	ConcatS         rule  22
	Add             rule  23
	Subtract        rule  24
	Mul             rule  25
	Quot            rule  26
	Rem             rule  27
	Cons            rule  28
	Case            rule  29
	Rec             rule  30
	Get             rule  31
	Put             rule  32
	Hput            rule  33
	Hcase           rule  34
	Split           rule  35
	Fork            rule  36
	Plug            rule  37
	Run             rule  38
	Close           rule  39
	Halt            rule  40
	Ch_Id           rule  41
	Main_run        rule  42
	Character       rule  43
	UIdent          rule  44
	PIdent          rule  45
	PInteger        rule  46
	AMPLCODE        rule  47
	AMPL_CONSTRUCTS rules 48, 49, 50, 51, 52, 53, 54
	ListAMPL_CONSTRUCTS rules 55, 56
	HANDLE_SPEC     rule  57
	Handle          rule  58
	ListHANDLE_SPEC rules 59, 60, 61
	ListHandle      rules 62, 63
	IMPORTS         rule  64
	LUIDENT         rules 65, 66
	DirPath         rule  67
	ListLUIDENT     rules 68, 69
	Slash           rules 70, 71
	ListIMPORT      rules 72, 73
	IMPORT          rule  74
	CONSTRUCTORS    rule  75
	DESTRUCTORS     rule  76
	STRUCTOR_SPEC   rule  77
	STRUCT          rule  78
	ListSTRUCTOR_SPEC rules 79, 80, 81
	ListSTRUCT      rules 82, 83
	HANDLES         rule  84
	COHANDLES       rule  85
	PROCESSES       rule  86
	ListPROCESS_SPEC rules 87, 88, 89
	PROCESS_SPEC    rule  90
	Vars            rule  91
	ListVars        rules 92, 93, 94
	FUNCTIONS       rule  95
	ListFUNCTION_SPEC rules 96, 97, 98
	FUNCTION_SPEC   rule  99
	START           rules 100, 101
	CHANNEL_SPEC    rules 102, 103
	COMS            rule  104
	ListCOM         rules 105, 106, 107
	COM             rules 108, 109, 110, 111, 112, 113, 114, 115, 116, 117, 118, 119, 120, 121, 122, 123, 124, 125, 126, 127, 128, 129, 130, 131, 132, 133, 134, 135, 136, 137, 138, 139, 140, 141, 142, 143, 144, 145, 146, 147, 148, 149, 150, 151, 152, 153, 154
	LABELCOMS       rules 155, 156
	ListCOMS        rules 157, 158, 159
	ListLABELCOMS   rules 160, 161, 162
	ListPIdent      rules 163, 164, 165
	CInteger        rules 166, 167
	ListCInteger    rules 168, 169, 170

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'%cohandles'   reduce using rule 55
	'%constructors'reduce using rule 55
	'%destructors' reduce using rule 55
	'%functions'   reduce using rule 55
	'%handles'     reduce using rule 55
	'%include'     reduce using rule 55
	'%processes'   reduce using rule 55
	L_Main_run     reduce using rule 55
	%eof           reduce using rule 55

	AMPLCODE       goto state 3
	ListAMPL_CONSTRUCTSgoto state 4

State 1


	L_quoted       shift, and enter state 2


State 2

	String -> L_quoted .                                (rule 1)

	';'            reduce using rule 1
	'}'            reduce using rule 1


State 3

	%start_pAMPLCODE -> AMPLCODE .                      (rule 0)

	%eof           accept


State 4

	AMPLCODE -> ListAMPL_CONSTRUCTS . START             (rule 47)
	ListAMPL_CONSTRUCTS -> ListAMPL_CONSTRUCTS . AMPL_CONSTRUCTS    (rule 56)

	'%cohandles'   shift, and enter state 15
	'%constructors'shift, and enter state 16
	'%destructors' shift, and enter state 17
	'%functions'   shift, and enter state 18
	'%handles'     shift, and enter state 19
	'%include'     shift, and enter state 20
	'%processes'   shift, and enter state 21
	L_Main_run     shift, and enter state 22
	%eof           reduce using rule 101

	Main_run       goto state 5
	AMPL_CONSTRUCTSgoto state 6
	IMPORT         goto state 7
	CONSTRUCTORS   goto state 8
	DESTRUCTORS    goto state 9
	HANDLES        goto state 10
	COHANDLES      goto state 11
	PROCESSES      goto state 12
	FUNCTIONS      goto state 13
	START          goto state 14

State 5

	START -> Main_run . CHANNEL_SPEC ':' COMS           (rule 100)

	'('            shift, and enter state 32

	CHANNEL_SPEC   goto state 31

State 6

	ListAMPL_CONSTRUCTS -> ListAMPL_CONSTRUCTS AMPL_CONSTRUCTS .    (rule 56)

	'%cohandles'   reduce using rule 56
	'%constructors'reduce using rule 56
	'%destructors' reduce using rule 56
	'%functions'   reduce using rule 56
	'%handles'     reduce using rule 56
	'%include'     reduce using rule 56
	'%processes'   reduce using rule 56
	L_Main_run     reduce using rule 56
	%eof           reduce using rule 56


State 7

	AMPL_CONSTRUCTS -> IMPORT .                         (rule 48)

	'%cohandles'   reduce using rule 48
	'%constructors'reduce using rule 48
	'%destructors' reduce using rule 48
	'%functions'   reduce using rule 48
	'%handles'     reduce using rule 48
	'%include'     reduce using rule 48
	'%processes'   reduce using rule 48
	L_Main_run     reduce using rule 48
	%eof           reduce using rule 48


State 8

	AMPL_CONSTRUCTS -> CONSTRUCTORS .                   (rule 51)

	'%cohandles'   reduce using rule 51
	'%constructors'reduce using rule 51
	'%destructors' reduce using rule 51
	'%functions'   reduce using rule 51
	'%handles'     reduce using rule 51
	'%include'     reduce using rule 51
	'%processes'   reduce using rule 51
	L_Main_run     reduce using rule 51
	%eof           reduce using rule 51


State 9

	AMPL_CONSTRUCTS -> DESTRUCTORS .                    (rule 52)

	'%cohandles'   reduce using rule 52
	'%constructors'reduce using rule 52
	'%destructors' reduce using rule 52
	'%functions'   reduce using rule 52
	'%handles'     reduce using rule 52
	'%include'     reduce using rule 52
	'%processes'   reduce using rule 52
	L_Main_run     reduce using rule 52
	%eof           reduce using rule 52


State 10

	AMPL_CONSTRUCTS -> HANDLES .                        (rule 49)

	'%cohandles'   reduce using rule 49
	'%constructors'reduce using rule 49
	'%destructors' reduce using rule 49
	'%functions'   reduce using rule 49
	'%handles'     reduce using rule 49
	'%include'     reduce using rule 49
	'%processes'   reduce using rule 49
	L_Main_run     reduce using rule 49
	%eof           reduce using rule 49


State 11

	AMPL_CONSTRUCTS -> COHANDLES .                      (rule 50)

	'%cohandles'   reduce using rule 50
	'%constructors'reduce using rule 50
	'%destructors' reduce using rule 50
	'%functions'   reduce using rule 50
	'%handles'     reduce using rule 50
	'%include'     reduce using rule 50
	'%processes'   reduce using rule 50
	L_Main_run     reduce using rule 50
	%eof           reduce using rule 50


State 12

	AMPL_CONSTRUCTS -> PROCESSES .                      (rule 53)

	'%cohandles'   reduce using rule 53
	'%constructors'reduce using rule 53
	'%destructors' reduce using rule 53
	'%functions'   reduce using rule 53
	'%handles'     reduce using rule 53
	'%include'     reduce using rule 53
	'%processes'   reduce using rule 53
	L_Main_run     reduce using rule 53
	%eof           reduce using rule 53


State 13

	AMPL_CONSTRUCTS -> FUNCTIONS .                      (rule 54)

	'%cohandles'   reduce using rule 54
	'%constructors'reduce using rule 54
	'%destructors' reduce using rule 54
	'%functions'   reduce using rule 54
	'%handles'     reduce using rule 54
	'%include'     reduce using rule 54
	'%processes'   reduce using rule 54
	L_Main_run     reduce using rule 54
	%eof           reduce using rule 54


State 14

	AMPLCODE -> ListAMPL_CONSTRUCTS START .             (rule 47)

	%eof           reduce using rule 47


State 15

	COHANDLES -> '%cohandles' . ':' '{' ListHANDLE_SPEC '}'    (rule 85)

	':'            shift, and enter state 30


State 16

	CONSTRUCTORS -> '%constructors' . ':' '{' ListSTRUCTOR_SPEC '}'    (rule 75)

	':'            shift, and enter state 29


State 17

	DESTRUCTORS -> '%destructors' . ':' '{' ListSTRUCTOR_SPEC '}'    (rule 76)

	':'            shift, and enter state 28


State 18

	FUNCTIONS -> '%functions' . ':' '{' ListFUNCTION_SPEC '}'    (rule 95)

	':'            shift, and enter state 27


State 19

	HANDLES -> '%handles' . ':' '{' ListHANDLE_SPEC '}'    (rule 84)

	':'            shift, and enter state 26


State 20

	IMPORT -> '%include' . Slash DirPath '.ampl'        (rule 74)

	'/'            shift, and enter state 25
	L_UIdent       reduce using rule 71
	L_PIdent       reduce using rule 71

	Slash          goto state 24

State 21

	PROCESSES -> '%processes' . ':' '{' ListPROCESS_SPEC '}'    (rule 86)

	':'            shift, and enter state 23


State 22

	Main_run -> L_Main_run .                            (rule 42)

	'('            reduce using rule 42


State 23

	PROCESSES -> '%processes' ':' . '{' ListPROCESS_SPEC '}'    (rule 86)

	'{'            shift, and enter state 52


State 24

	IMPORT -> '%include' Slash . DirPath '.ampl'        (rule 74)

	L_UIdent       shift, and enter state 50
	L_PIdent       shift, and enter state 51

	UIdent         goto state 45
	PIdent         goto state 46
	LUIDENT        goto state 47
	DirPath        goto state 48
	ListLUIDENT    goto state 49

State 25

	Slash -> '/' .                                      (rule 70)

	L_UIdent       reduce using rule 70
	L_PIdent       reduce using rule 70


State 26

	HANDLES -> '%handles' ':' . '{' ListHANDLE_SPEC '}'    (rule 84)

	'{'            shift, and enter state 44


State 27

	FUNCTIONS -> '%functions' ':' . '{' ListFUNCTION_SPEC '}'    (rule 95)

	'{'            shift, and enter state 43


State 28

	DESTRUCTORS -> '%destructors' ':' . '{' ListSTRUCTOR_SPEC '}'    (rule 76)

	'{'            shift, and enter state 42


State 29

	CONSTRUCTORS -> '%constructors' ':' . '{' ListSTRUCTOR_SPEC '}'    (rule 75)

	'{'            shift, and enter state 41


State 30

	COHANDLES -> '%cohandles' ':' . '{' ListHANDLE_SPEC '}'    (rule 85)

	'{'            shift, and enter state 40


State 31

	START -> Main_run CHANNEL_SPEC . ':' COMS           (rule 100)

	':'            shift, and enter state 39


State 32

	CHANNEL_SPEC -> '(' . '|' ListPIdent '=>' ListPIdent ')'    (rule 102)
	CHANNEL_SPEC -> '(' . ListCInteger '=>' ListCInteger ')'    (rule 103)

	'-'            shift, and enter state 36
	'=>'           reduce using rule 168
	'|'            shift, and enter state 37
	L_PInteger     shift, and enter state 38

	PInteger       goto state 33
	CInteger       goto state 34
	ListCInteger   goto state 35

State 33

	CInteger -> PInteger .                              (rule 166)

	'('            reduce using rule 166
	')'            reduce using rule 166
	','            reduce using rule 166
	';'            reduce using rule 166
	'=>'           reduce using rule 166
	'}'            reduce using rule 166


State 34

	ListCInteger -> CInteger .                          (rule 169)
	ListCInteger -> CInteger . ',' ListCInteger         (rule 170)

	')'            reduce using rule 169
	','            shift, and enter state 75
	'=>'           reduce using rule 169


State 35

	CHANNEL_SPEC -> '(' ListCInteger . '=>' ListCInteger ')'    (rule 103)

	'=>'           shift, and enter state 74


State 36

	CInteger -> '-' . PInteger                          (rule 167)

	L_PInteger     shift, and enter state 38

	PInteger       goto state 73

State 37

	CHANNEL_SPEC -> '(' '|' . ListPIdent '=>' ListPIdent ')'    (rule 102)

	'=>'           reduce using rule 163
	L_PIdent       shift, and enter state 51

	PIdent         goto state 71
	ListPIdent     goto state 72

State 38

	PInteger -> L_PInteger .                            (rule 46)

	'('            reduce using rule 46
	')'            reduce using rule 46
	','            reduce using rule 46
	';'            reduce using rule 46
	'=>'           reduce using rule 46
	'}'            reduce using rule 46


State 39

	START -> Main_run CHANNEL_SPEC ':' . COMS           (rule 100)

	'{'            shift, and enter state 70

	COMS           goto state 69

State 40

	COHANDLES -> '%cohandles' ':' '{' . ListHANDLE_SPEC '}'    (rule 85)

	'}'            reduce using rule 59
	L_UIdent       shift, and enter state 50

	UIdent         goto state 58
	HANDLE_SPEC    goto state 59
	ListHANDLE_SPECgoto state 68

State 41

	CONSTRUCTORS -> '%constructors' ':' '{' . ListSTRUCTOR_SPEC '}'    (rule 75)

	'}'            reduce using rule 79
	L_UIdent       shift, and enter state 50

	UIdent         goto state 64
	STRUCTOR_SPEC  goto state 65
	ListSTRUCTOR_SPECgoto state 67

State 42

	DESTRUCTORS -> '%destructors' ':' '{' . ListSTRUCTOR_SPEC '}'    (rule 76)

	'}'            reduce using rule 79
	L_UIdent       shift, and enter state 50

	UIdent         goto state 64
	STRUCTOR_SPEC  goto state 65
	ListSTRUCTOR_SPECgoto state 66

State 43

	FUNCTIONS -> '%functions' ':' '{' . ListFUNCTION_SPEC '}'    (rule 95)

	'}'            reduce using rule 96
	L_PIdent       shift, and enter state 51

	PIdent         goto state 61
	ListFUNCTION_SPECgoto state 62
	FUNCTION_SPEC  goto state 63

State 44

	HANDLES -> '%handles' ':' '{' . ListHANDLE_SPEC '}'    (rule 84)

	'}'            reduce using rule 59
	L_UIdent       shift, and enter state 50

	UIdent         goto state 58
	HANDLE_SPEC    goto state 59
	ListHANDLE_SPECgoto state 60

State 45

	LUIDENT -> UIdent .                                 (rule 66)

	'.ampl'        reduce using rule 66
	'/'            reduce using rule 66


State 46

	LUIDENT -> PIdent .                                 (rule 65)

	'.ampl'        reduce using rule 65
	'/'            reduce using rule 65


State 47

	ListLUIDENT -> LUIDENT .                            (rule 68)
	ListLUIDENT -> LUIDENT . '/' ListLUIDENT            (rule 69)

	'.ampl'        reduce using rule 68
	'/'            shift, and enter state 57


State 48

	IMPORT -> '%include' Slash DirPath . '.ampl'        (rule 74)

	'.ampl'        shift, and enter state 56


State 49

	DirPath -> ListLUIDENT .                            (rule 67)

	'.ampl'        reduce using rule 67


State 50

	UIdent -> L_UIdent .                                (rule 44)

	'('            reduce using rule 44
	'.'            reduce using rule 44
	'.ampl'        reduce using rule 44
	'/'            reduce using rule 44
	':'            reduce using rule 44
	';'            reduce using rule 44
	'='            reduce using rule 44
	'}'            reduce using rule 44
	L_PIdent       reduce using rule 44
	L_PInteger     reduce using rule 44


State 51

	PIdent -> L_PIdent .                                (rule 45)

	'('            reduce using rule 45
	')'            reduce using rule 45
	','            reduce using rule 45
	'.ampl'        reduce using rule 45
	'/'            reduce using rule 45
	':'            reduce using rule 45
	':='           reduce using rule 45
	';'            reduce using rule 45
	'=>'           reduce using rule 45
	']'            reduce using rule 45
	'as'           reduce using rule 45
	'into'         reduce using rule 45
	'of'           reduce using rule 45
	'on'           reduce using rule 45
	'with'         reduce using rule 45
	'|'            reduce using rule 45
	'}'            reduce using rule 45
	L_Ch_Id        reduce using rule 45
	L_UIdent       reduce using rule 45
	L_PIdent       reduce using rule 45


State 52

	PROCESSES -> '%processes' ':' '{' . ListPROCESS_SPEC '}'    (rule 86)

	'}'            reduce using rule 87
	L_PIdent       shift, and enter state 51

	PIdent         goto state 53
	ListPROCESS_SPECgoto state 54
	PROCESS_SPEC   goto state 55

State 53

	PROCESS_SPEC -> PIdent . '(' ListVars '|' ListPIdent '=>' ListPIdent ')' '=' COMS    (rule 90)

	'('            shift, and enter state 177


State 54

	PROCESSES -> '%processes' ':' '{' ListPROCESS_SPEC . '}'    (rule 86)

	'}'            shift, and enter state 176


State 55

	ListPROCESS_SPEC -> PROCESS_SPEC .                  (rule 88)
	ListPROCESS_SPEC -> PROCESS_SPEC . ';' ListPROCESS_SPEC    (rule 89)

	';'            shift, and enter state 175
	'}'            reduce using rule 88


State 56

	IMPORT -> '%include' Slash DirPath '.ampl' .        (rule 74)

	'%cohandles'   reduce using rule 74
	'%constructors'reduce using rule 74
	'%destructors' reduce using rule 74
	'%functions'   reduce using rule 74
	'%handles'     reduce using rule 74
	'%include'     reduce using rule 74
	'%processes'   reduce using rule 74
	L_Main_run     reduce using rule 74
	%eof           reduce using rule 74


State 57

	ListLUIDENT -> LUIDENT '/' . ListLUIDENT            (rule 69)

	L_UIdent       shift, and enter state 50
	L_PIdent       shift, and enter state 51

	UIdent         goto state 45
	PIdent         goto state 46
	LUIDENT        goto state 47
	ListLUIDENT    goto state 174

State 58

	HANDLE_SPEC -> UIdent . '=' '{' ListHandle '}'      (rule 57)

	'='            shift, and enter state 173


State 59

	ListHANDLE_SPEC -> HANDLE_SPEC .                    (rule 60)
	ListHANDLE_SPEC -> HANDLE_SPEC . ';' ListHANDLE_SPEC    (rule 61)

	';'            shift, and enter state 172
	'}'            reduce using rule 60


State 60

	HANDLES -> '%handles' ':' '{' ListHANDLE_SPEC . '}'    (rule 84)

	'}'            shift, and enter state 171


State 61

	FUNCTION_SPEC -> PIdent . '(' ListVars ')' '=' COMS    (rule 99)

	'('            shift, and enter state 170


State 62

	FUNCTIONS -> '%functions' ':' '{' ListFUNCTION_SPEC . '}'    (rule 95)

	'}'            shift, and enter state 169


State 63

	ListFUNCTION_SPEC -> FUNCTION_SPEC .                (rule 97)
	ListFUNCTION_SPEC -> FUNCTION_SPEC . ';' ListFUNCTION_SPEC    (rule 98)

	';'            shift, and enter state 168
	'}'            reduce using rule 97


State 64

	STRUCTOR_SPEC -> UIdent . '=' '{' ListSTRUCT '}'    (rule 77)

	'='            shift, and enter state 167


State 65

	ListSTRUCTOR_SPEC -> STRUCTOR_SPEC .                (rule 80)
	ListSTRUCTOR_SPEC -> STRUCTOR_SPEC . ';' ListSTRUCTOR_SPEC    (rule 81)

	';'            shift, and enter state 166
	'}'            reduce using rule 80


State 66

	DESTRUCTORS -> '%destructors' ':' '{' ListSTRUCTOR_SPEC . '}'    (rule 76)

	'}'            shift, and enter state 165


State 67

	CONSTRUCTORS -> '%constructors' ':' '{' ListSTRUCTOR_SPEC . '}'    (rule 75)

	'}'            shift, and enter state 164


State 68

	COHANDLES -> '%cohandles' ':' '{' ListHANDLE_SPEC . '}'    (rule 85)

	'}'            shift, and enter state 163


State 69

	START -> Main_run CHANNEL_SPEC ':' COMS .           (rule 100)

	%eof           reduce using rule 100


State 70

	COMS -> '{' . ListCOM '}'                           (rule 104)
